# chronik

./: .ai-context.yml  .env.example  .gitignore  .hauski-reports  CHANGELOG.md  LICENSE  Makefile  README.md  app.py  check_slowapi.py  integrity.py  ops.py  patch1.patch  provenance.py  push.err  quality.py  requirements.txt  retention.py  sichter-reports  slowapi_compat.py  storage.py  test_app.py  validation.py
.wgx/: profile.yml
clients/rust/chronik_producer/: Cargo.toml
clients/rust/chronik_producer/examples/: send.rs
clients/rust/chronik_producer/src/: lib.rs
config/: retention.yml
data/: .gitignore
demo/: .gitkeep
docs/: PLAN_OPTIMIERUNG.md  README_CONTRACTS.md  api.md  architecture.md  aussen.event.schema.json  chronik.event.batch.v1.schema.json  cli-curl.md  event-contracts.md  heimgeist.self_state.snapshot.schema.json  heimgeist_spec.md  insights.daily.schema.json  mitschreiber-ingest.md  openapi.yaml  operations.md
heimgewebe-.ai-context.yml-sammlung/: aussensensor.ai-context.yml  chronik.ai-context.yml  contracts.ai-context.yml  hauski-audio.ai-context.yml  hauski.ai-context.yml  heimlern.ai-context.yml  metarepo.ai-context.yml  mitschreiber.ai-context.yml  semantah.ai-context.yml  sichter.ai-context.yml  tools.ai-context.yml  vault-gewebe.ai-context.yml  wgx.ai-context.yml
merges/: leitstand_merge_2510262237__.github_workflows.md  leitstand_merge_2510262237__docs_adr.md  leitstand_merge_2510262237__index.md  leitstand_merge_2510262237__root.md  leitstand_merge_2510262237__scripts.md  leitstand_merge_2510262238__data.md  (+6 more)
templates/: ops.html
(+51 files in other folders)
