[package]
name = "chronik_producer"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Minimal client to send events to chronik /v1/ingest"
repository = "https://github.com/heimgewebe/chronik"

[features]
default = ["blocking"]
blocking = ["reqwest/blocking", "serde_json"]
async = ["reqwest/json", "tokio", "serde_json", "futures-util", "bytes"]

[dependencies]
reqwest = { version = "0.12", default-features = true, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
futures-util = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }
